--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <script>
   // Initialization code
-  const boxes = Array.from(document.querySelectorAll("td"));
+  const boxes = Array.from(document.querySelectorAll("th"));
   const inputs = Array.from(document.querySelectorAll("[type=checkbox]"));
   const rows = [1, 2, 3].map((n) =>
     Array.from(document.querySelectorAll(`tr:nth-child(${n}) td`))
