--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   // The user chose a box, check for win, robot turn, check for win.
   function handleClickInput(evt) {
-    evt.target.closest("td").innerHTML = HUMAN;
+    evt.target.closest("th").innerHTML = HUMAN;
     if (hasWin()) {
       return endGame();
     }
